--- a/book-program/src/index.css
+++ b/book-program/src/index.css
@@ -25,7 +25,7 @@ body {
 }
 .book {
   background-color: #fff;
-  border: 1rem;
+  border-radius: 1rem;
   padding: 2rem;
   text-align: center;
 }
@@ -33,7 +33,14 @@ body {
   width: 100%;
   object-fit: cover;
 }
-.book h2 {
+.book h {
   margin-top: 1rem;
   font-size: 1rem;
+}
+
+.book h4 {
+  color: "#617d98";
+  font-size: 0.75rem;
+  margin-top: "0.5rem";
+  letter-spacing: 2px;
 }
